[package]
edition = "2021"
name = "cve_analyzer"
version = "0.1.0"

[[bin]]
name = "download_cve"
path = "src/bin/download_cve.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
flate2 = "1.0"
hex = "0.4"
log = "0.4"
reqwest = "0.12"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha2 = "0.10"
tokio = {version = "1", features = ["full"]}
tracing-subscriber = "0.3"
zip = "2.2"
