[package]
edition = "2021"
name = "cve_analyzer"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clickhouse = {version = "0.13", features = ["time"]}
flate2 = "1.0"
hex = "0.4"
log = "0.4"
once_cell = "1.20"
reqwest = "0.12"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha2 = "0.10"
time = {version = "0.3", features = ["macros", "serde", "serde-human-readable", "parsing"]}
tokio = {version = "1", features = ["full"]}
tracing-subscriber = "0.3"
zip = "2.2"
